# dagonstar-containers

./: .gitignore  .wci.yml  README.md  dagon.ini.sample  requirements.txt  setup.cfg
dagon/: __init__.py  apptainer_task.py  batch.py  check_nomad.sh  checkpoint.py  config.py  configure_nomad.sh  dag_tps.py  docker_task.py  kubernetes_task.py  nomad_task.py  remote.py  setup-apptainer.sh  setup-k3s.sh  task.py
dagon/communication/: __init__.py  data_transfer.py  ssh.py
dagon/dockercontainer/: __init__.py
examples/edge_fog/: Installing-Apptainer-RPI5.md  Installing-Docker-RPI5.md  Installing-Kubernetes-RPI5.md  Installing-Nomad-RPI5.md  Metrics-Setup.md  Power-Monitoring.md  README.md  Setting-Images.md  dht_sensor_workflow.json  edge_apptainer_script.py  edge_docker_script.py  edge_fog_apptainer_local.py  edge_fog_apptainer_remote.py  edge_fog_apptainer_script.py  edge_fog_cloud_apptainer_metrics.py  edge_fog_cloud_docker_metrics.py  edge_fog_cloud_kubernetes_metrics.py  edge_fog_cloud_nomad_metrics.py  edge_fog_docker_script.py  edge_fog_kubernetes.py  edge_fog_nomad_script.py  edge_kubernetes_script.py  edge_nomad_script.py  energy_metrics_collector.py  grafana-dashboard-dagon-tasks.json  metrics.ino  metrics_analysis_tools.py  power_monitor.sh  rpi_pmic_exporter.py
outputs/: IoT_Metrics.Apptainer_Metrics.csv  IoT_Metrics.Apptainer_Metrics.json  IoT_Metrics.Docker_Metrics.csv  IoT_Metrics.Docker_Metrics.json  IoT_Metrics.Nomad_Metrics.csv  IoT_Metrics.Nomad_Metrics.json
tests/: README.md  test_apptainer_task.py  test_docker_task.py  test_kubernetes_task.py
(+34 files in other folders)
