[metadata]
name = dagonstar
version = 1.0.2
author = Raffaele Montella
author_email = raffaele.montella@uniparthenope.it
description = DAGon* is a simple Python based workflow engine able to run job on everything from the local machine to distributed virtual HPC clusters hosted in private and public clouds.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DagOnStar/dagonstar
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages =
    dagon
    dagon.api
    dagon.cloud
    dagon.communication
    dagon.ftp_publisher
python_requires = >=3.8.15
install_requires =
    requests==2.31.0
    fabric3
    boto3==1.28.62
    paramiko
    graphviz==0.20.1
    globus_sdk==3.28.0
    docker==7.1.0
    apache-libcloud==3.8.0
    configparser==6.0.0
    flask==2.2.2
    Flask-API==3.1
    werkzeug==2.2.2
    pycryptodome==3.20.0
